PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Minor updates to logic for determining how many times to dynamically increase run count on high variance results
pts-core: Add DropNoisyResults option if wishing to not save results that have too high of deviation between runs

Phoronix Test Suite 8.2.0 Milestone 2
15 August 2018

pts-core: Add DivideResultDivisor to result parser
pts-core: Add libevent as possible external dependency
pts-core: Alert the user when the test install directory is on a file-system mounted with 'noexec'
pts-core: Optional support with PHP 7.3+ to also obtain network info using net_get_interfaces()
pts-core: Fix possible alignment issue with value/spacer on outputting text-based result graphs
pts-core: When Internet is not available and running list-tests, only show tests that are available via caches unless `list-all-tests` is run
pts-core: Rework `list-recommended-tests` to make use of download count information exposed via OB index repository data rather than needing to make fresh web query
pts-core: Show "popular tests" in the invalid command helper
pts-core: Allow stress-run to be triggered from interactive mode
pts-core: Allow comparing dynamic in-line result comparisons against local results when no Internet results matching or Internet not available
phodevi: Reporting of L1TF / Level 1 Terminal Fault vulnerability
pts_Graph: Tweaks to text sizing on vertical bar graphs

Phoronix Test Suite 8.2.0 Milestone 1
21 July 2018

pts-core: Add readline-based autocompletion support for text-based menu selection lists
pts-core: Add readline-based autocompletion support for the result file save name for trying to match existing result file identifiers
pts-core: Add autocompletion support for result file identifier based on installed software/hardware
pts-core: Various Alpine Linux external dependency updates
pts-core: Various improvements to the Shell sub-command functionality, including auto-completion support